--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.16",
+    "@heroui/card": "^2.2.15",
+    "@heroui/checkbox": "^2.3.15",
     "@heroui/code": "2.2.12",
+    "@heroui/image": "^2.2.10",
     "@heroui/input": "2.4.16",
     "@heroui/kbd": "2.2.12",
     "@heroui/link": "2.2.13",
     "@heroui/listbox": "2.3.15",
+    "@heroui/modal": "^2.2.13",
     "@heroui/navbar": "2.2.14",
+    "@heroui/slider": "^2.4.13",
     "@heroui/snippet": "2.2.17",
     "@heroui/switch": "2.2.14",
     "@heroui/system": "2.4.12",
